--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,11 +13,21 @@ dependencies:
     sdk: flutter
   dio: ^4.0.4
   flutter_bloc: ^8.0.1
+  json_annotation: ^4.8.1
+  freezed_annotation: ^2.2.0
+  retrofit: ^3.3.1
+  get_it: ^7.6.0
+  injectable: ^2.1.1
 
 dev_dependencies:
+  build_runner: ^2.4.4
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
+  freezed: ^2.3.4
+  injectable_generator: ^2.1.5
+  json_serializable: ^6.7.0
+  retrofit_generator: ^4.2.0
 
 flutter:
   uses-material-design: true
